Trying to fix white line problem on tablet

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -56,6 +56,7 @@ table {
 html, body {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 span.bold {
@@ -77,7 +78,7 @@ a {
 .container {
     width: 100%;
     height: auto;
-    min-height: 100%;
+    min-height: 100.5%;
     position: relative;
     background:url('../imgs/bgs/cross.jpg');
     background-size: cover;
@@ -463,6 +464,10 @@ $anim-time: 0.4s;
 }
 
 @media (max-height: 730px) {
+    html, body {
+        overflow: auto;
+    }
+    
     .inner {
         display: block;
         position: relative;
